# packed-vector

./: CHANGELOG.md  README.md  cabal.project  packed-vector.cabal
benchmark/: Main.hs
src/Data/: Pack.hs  PackedVector.hs
src/Data/PackedVector/: Internal.hs  Mutable.hs  Util.hs
src/Data/PackedVector/Mutable/: Internal.hs
test/: Generators.hs  ReadWriteSpec.hs
